--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -1,251 +1,273 @@
 ---
-title: <OrganizationProfile /> component
-description: The <OrganizationProfile /> component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
+title: JavaScript <OrganizationProfile />
+description: This JavaScript reference describes the properties and methods related to Clerk's <UserButton /> component.
 ---
 
-# `<OrganizationProfile />` component
+# JavaScript `<OrganizationProfile />`
+
+<Callout type="warning">
+  This JavaScript reference describes the properties and methods related to Clerk's `<OrganizationProfile />` component. If you are looking for the React component, see the [`<OrganizationProfile />`](/docs/components/user/user-button) documentation.
+</Callout>
 
 <Images alt="Organization Profile Example" width={1024} height={548} src="/docs/images/ui-components/component-org_profile.svg" />
 
-The [`<OrganizationProfile />`][orgprofile-ref] component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
+The [`<OrganizationProfile />`](/docs/components/user/user-button) component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<UserButton />` component:
+
+- [`mountOrganizationProfile()`](#mount-organization-profile)
+- [`unmountOrganizationProfile()`](#unmount-organization-profile)
+- [`openOrganizationProfile()`](#open-organization-profile)
+- [`closeOrganizationProfile()`](#close-organization-profile)
 
 ## `mountOrganizationProfile()`
 
-Render the [`<OrganizationProfile />`][orgprofile-ref] component to an HTML `<div>` element.
-
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {15-19}
-  import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
-
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="organization-profile"
-    ></div>
-  `;
-
-  const organizationProfileComponent = document.querySelector<HTMLDivElement>('#organization-profile')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-  await clerk.load();
-
-  clerk.mountOrganizationProfile(organizationProfileComponent, {
-    appearance: {
-      baseTheme: dark
-    }
-  });
-  ```
-
-  ```html {13-17}
-  <div id="organization-profile"></div>
-  <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const organizationProfileComponent = document.querySelector('#organization-profile');
-
-      window.Clerk.mountOrganizationProfile(organizationProfileComponent, {
-        appearance: {
-          baseTheme: dark
-        }
-      });
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
-
-### Properties
+Render the `<OrganizationProfile />` component to an HTML `<div>` element.
 
 ```typescript
 function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProfileProps): void;
 ```
 
+### `mountOrganizationProfile()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<OrganizationProfile />`][orgprofile-ref] component |
-| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the [`<OrganizationProfile />`][orgprofile-ref] component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<OrganizationProfile />` component |
+| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the `<OrganizationProfile />` component |
 
-## `unmountOrganizationProfile()`
+### `mountOrganizationProfile()` usage
 
-Unmount and run cleanup on an existing [`<OrganizationProfile />`][orgprofile-ref] component instance.
+<InjectKeys>
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {19}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
   import Clerk from '@clerk/clerk-js';
 
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="organization-profile"
-    ></div>
-  `
-
-  const organizationProfileComponent = document.querySelector<HTMLDivElement>('#organization-profile')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.mountOrganizationProfile(organizationProfileComponent);
+  document.getElementById("app").innerHTML = `
+    <div id="organization-profile"></div>
+  `;
 
-  // ...
+  const orgProfileDiv =
+    document.getElementById("organization-profile");
 
-  clerk.unmountOrganizationProfile(organizationProfileComponent);
+  clerk.mountOrganizationProfile(orgProfileDiv);
   ```
 
-  ```html {17}
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="organization-profile"> element to your HTML -->
   <div id="organization-profile"></div>
+
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      const orgProfileDiv =
+        document.getElementById('organization-profile');
 
-      const organizationProfileComponent = document.querySelector('#organization-profile');
-
-      window.Clerk.mountOrganizationProfile(organizationProfileComponent);
-
-      // ...
-
-      window.Clerk.unmountOrganizationProfile(organizationProfileComponent);
+      Clerk.mountOrganizationProfile(orgProfileDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+## `unmountOrganizationProfile()`
+
+Unmount and run cleanup on an existing `<OrganizationProfile />` component instance.
 
 ```typescript
 function unmountOrganizationProfile(node: HTMLDivElement): void;
 ```
 
+### `unmountOrganizationProfile()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<OrganizationProfile />`][orgprofile-ref] component instance. |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<OrganizationProfile />` component instance. |
 
-## `openOrganizationProfile()`
+### `unmountOrganizationProfile()` usage
 
-Opens the [`<OrganizationProfile />`][orgprofile-ref] component as an overlay at the root of your HTML `body` element.
+<InjectKeys>
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {7-11}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
   import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk('pk_[publishable_key]');
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.openOrganizationProfile({
-    appearance: {
-      baseTheme: dark
-    }
-  });
+  document.getElementById('app').innerHTML = `
+    <div id="organization-profile"></div>
+  `
+
+  const orgProfileDiv =
+    document.getElementById('organization-profile');
+
+  clerk.mountOrganizationProfile(orgProfileDiv);
+
+  // ...
+
+  clerk.unmountOrganizationProfile(orgProfileDiv);
   ```
 
-  ```html {10-14}
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="organization-profile"> element to your HTML -->
+  <div id="organization-profile"></div>
+
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      const orgProfileDiv =
+        document.getElementById('organization-profile');
 
-      window.Clerk.openOrganizationProfile({
-        appearance: {
-          baseTheme: dark
-        }
-      });
+      Clerk.mountOrganizationProfile(orgProfileDiv);
+
+      // ...
+
+      Clerk.unmountOrganizationProfile(orgProfileDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+## `openOrganizationProfile()`
+
+Opens the `<OrganizationProfile />` component as an overlay at the root of your HTML `body` element.
 
 ```typescript
 function openOrganizationProfile(props?: OrganizationProfileProps): void;
 ```
 
+### `openOrganizationProfile()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the [`<OrganizationProfile />`][orgprofile-ref] component |
+| `props?` | [`OrganizationProfileProps`](#organization-profile-props) | The properties to pass to the `<OrganizationProfile />` component |
+
+### `openOrganizationProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="organization-profile"></div>
+  `
+
+  const orgProfileDiv =
+    document.getElementById('organization-profile');
+
+  clerk.openOrganizationProfile(orgProfileDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="organization-profile"> element to your HTML -->
+  <div id="organization-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgProfileDiv =
+        document.getElementById('organization-profile');
+
+      Clerk.openOrganizationProfile(orgProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## `closeOrganizationProfile()`
 
 Closes the organization profile overlay.
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {11}
-  import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
-
-  const clerk = new Clerk('pk_[publishable_key]');
-  await clerk.load();
-
-  clerk.openOrganizationProfile();
-
-  // ...
-
-  clerk.closeOrganizationProfile();
-  ```
-
-  ```html {14}
-  <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      window.Clerk.openOrganizationProfile();
-
-      // ...
-
-      window.Clerk.closeOrganizationProfile();
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
-
-### Properties
-
 ```typescript
 function closeOrganizationProfile(): void;
 ```
 
-## Custom pages
+### `closeOrganizationProfile()` usage
 
-You can add customized pages for the [`<OrganizationProfile />`][orgprofile-ref] component by using the `customPages` prop.
+<InjectKeys>
 
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="organization-profile"></div>
+  `
+
+  const orgProfileDiv =
+    document.getElementById('organization-profile');
+
+  clerk.closeOrganizationProfile(orgProfileDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="organization-profile"> element to your HTML -->
+  <div id="organization-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgProfileDiv =
+        document.getElementById('organization-profile');
+
+      Clerk.closeOrganizationProfile(orgProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+## `OrganizationProfileProps`
+
+All props below are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/organization-profile`.<br />This prop is ignored in hash-based routing. |
+| `appearance` | [`Appearance`](/docs/components/customization/overview) | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
+| `customPages` | [`CustomPage[]`](/docs/references/javascript/types/custom-page) | An array of custom pages to add to the organization profile. |
+
+## How to customize the `<OrganizationProfile />` component
+
+To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
+
+In addition, you also can add custom pages and links to the navigation sidebar of the `<OrganizationProfile />` component. See the example below:
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
   ```typescript {11}
   import Clerk from '@clerk/clerk-js';
 
-  const clerk = new Clerk('pk_[publishable_key]');
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   clerk.openOrganizationProfile({
@@ -281,20 +303,14 @@ You can add customized pages for the [`<OrganizationProfile />`][orgprofile-ref]
       }
     ]
   });
-
   ```
 
   ```html {14}
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener('load', async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      window.Clerk.openOrganizationProfile({
+      Clerk.openOrganizationProfile({
         customPages: [
           {
             url: "custom-page",
@@ -328,25 +344,8 @@ You can add customized pages for the [`<OrganizationProfile />`][orgprofile-ref]
         ]
       });
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-## `OrganizationProfileProps`
-
-All props below are optional.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/user-profile`.<br />This prop is ignored in hash-based routing. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `customPages` | <code>[CustomPage][custompage-ref][]</code> | An array of custom pages to add to the organization profile. |
-
-
-[orgprofile-ref]: /docs/components/organization/organization-profile
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
-[custompage-ref]: /docs/references/javascript/types/custom-page
+</InjectKeys>
