--- a/docs/references/javascript/clerk/create-organization.mdx
+++ b/docs/references/javascript/clerk/create-organization.mdx
@@ -1,240 +1,255 @@
 ---
-title: <CreateOrganization /> component
-description: The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
+title: JavaScript <CreateOrganization />
+description: This JavaScript reference describes the properties and methods related to Clerk's <CreateOrganization /> component.
 ---
 
-# `<CreateOrganization />` component
+# JavaScript `<CreateOrganization />`
+
+<Callout type="warning">
+  This JavaScript reference describes the properties and methods related to Clerk's `<CreateOrganization />` component. If you are looking for the React component, see the [`<CreateOrganization />`](/docs/components/organization/create-organization) documentation.
+</Callout>
 
 <Images alt="Create Organization Example" width={992} height={568} src="/docs/images/ui-components/component-org_create.svg" />
 
-The [`<CreateOrganization />`][createorg-ref] component is used to render an organization creation UI that allows users to create brand new organizations within your application.
+The [`<CreateOrganization />`](/docs/components/organization/create-organization) component is used to render an organization creation UI that allows users to create brand new organizations within your application.
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<CreateOrganization />` component:
+
+- [`mountCreateOrganization`](#mount-create-organization)
+- [`unmountCreateOrganization`](#unmount-create-organization)
+- [`openCreateOrganization`](#open-create-organization)
+- [`closeCreateOrganization`](#close-create-organization)
 
 ## `mountCreateOrganization()`
 
-Render the [`<CreateOrganization />`][createorg-ref] component to an HTML `<div>` element.
-
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {15-19}
-  import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
-
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="create-organization"
-    ></div>
-  `;
-
-  const createOrganizationComponent = document.querySelector<HTMLDivElement>('#create-organization')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-  await clerk.load();
-
-  clerk.mountCreateOrganization(createOrganizationComponent, {
-    appearance: {
-      baseTheme: dark
-    }
-  });
-  ```
-
-  ```html {13-17}
-  <div id="create-organization"></div>
-  <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const createOrganizationComponent = document.querySelector('#create-organization');
-
-      window.Clerk.mountCreateOrganization(createOrganizationComponent, {
-        appearance: {
-          baseTheme: dark
-        }
-      });
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
-
-### Properties
+Render the `<CreateOrganization />` component to an HTML `<div>` element.
 
 ```typescript
 function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
 ```
 
+## `mountCreateOrganization()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<CreateOrganization />`][createorg-ref] component |
-| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the [`<CreateOrganization />`][createorg-ref] component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<CreateOrganization />` component |
+| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the `<CreateOrganization />` component |
 
-## `unmountCreateOrganization`
+### `mountCreateOrganization()` usage
 
-Unmount and run cleanup on an existing [`<CreateOrganization />`][createorg-ref] component instance.
+<InjectKeys>
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {19}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
   import Clerk from '@clerk/clerk-js';
 
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="create-organization"
-    ></div>
-  `
-
-  const createOrganizationComponent = document.querySelector<HTMLDivElement>('#create-organization')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.mountCreateOrganization(createOrganizationComponent);
+  document.getElementById("app").innerHTML = `
+    <div id="create-organization"></div>
+  `;
 
-  // ...
+  const createOrgDiv =
+    document.getElementById("create-organization");
 
-  clerk.unmountCreateOrganization(createOrganizationComponent);
+  clerk.mountOrganizationSwitcher(createOrgDiv);
   ```
 
-  ```html {17}
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
   <div id="create-organization"></div>
+
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      const createOrgDiv =
+        document.getElementById("create-organization");
 
-      const createOrganizationComponent = document.querySelector('#create-organization');
-
-      window.Clerk.mountCreateOrganization(createOrganizationComponent);
-
-      // ...
-
-      window.Clerk.unmountCreateOrganization(createOrganizationComponent);
+      Clerk.mountOrganizationSwitcher(createOrgDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+## `unmountCreateOrganization()`
+
+Unmount and run cleanup on an existing `<CreateOrganization />` component instance.
 
 ```typescript
 function unmountCreateOrganization(node: HTMLDivElement): void;
 ```
 
+### `unmountCreateOrganization()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<CreateOrganization />`][createorg-ref] component instance |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<CreateOrganization />` component instance |
 
-## `openCreateOrganization`
+### `unmountCreateOrganization()` usage
 
-Opens the [`<CreateOrganization />`][createorg-ref] component as an overlay at the root of your HTML `body` element.
+<InjectKeys>
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {7-11}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
   import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk('pk_[publishable_key]');
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.openCreateOrganization({
-    appearance: {
-      baseTheme: dark
-    }
-  });
+  document.getElementById('app').innerHTML = `
+    <div id="create-organization"></div>
+  `
+
+  const createOrgDiv =
+    document.getElementById('create-organization');
+
+  clerk.mountCreateOrganization(createOrgDiv);
+
+  // ...
+
+  clerk.unmountCreateOrganization(createOrgDiv);
   ```
 
-  ```html {10-14}
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
+
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      const createOrgDiv =
+        document.getElementById('create-organization');
 
-      window.Clerk.openCreateOrganization({
-        appearance: {
-          baseTheme: dark
-        }
-      });
+      Clerk.mountCreateOrganization(createOrgDiv);
+
+      // ...
+
+      Clerk.unmountCreateOrganization(createOrgDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+## `openCreateOrganization()`
+
+Opens the `<CreateOrganization />` component as an overlay at the root of your HTML `body` element.
 
 ```typescript
 function openCreateOrganization(props?: CreateOrganizationProps): void;
 ```
 
+### `openCreateOrganization()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the [`<CreateOrganization />`][createorg-ref] component |
+| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the `<CreateOrganization />` component |
 
-## `closeCreateOrganization`
+### `openCreateOrganization()` usage
 
-Closes the organization profile overlay.
+<InjectKeys>
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {11}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
   import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk('pk_[publishable_key]');
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.openCreateOrganization();
+  document.getElementById('app').innerHTML = `
+    <div id="create-organization"></div>
+  `
 
-  // ...
+  const createOrgDiv =
+    document.getElementById('create-organization');
 
-  clerk.closeCreateOrganization();
+  clerk.openCreateOrganization(createOrgDiv);
   ```
 
-  ```html {14}
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
+
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      const createOrgDiv =
+        document.getElementById('create-organization');
 
-      window.Clerk.openCreateOrganization();
-
-      // ...
-
-      window.Clerk.closeCreateOrganization();
+      Clerk.openCreateOrganization(createOrgDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+## `closeCreateOrganization()`
+
+Closes the organization profile overlay.
 
 ```typescript
 function closeCreateOrganization(): void;
 ```
+
+### `closeCreateOrganization()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="organization-switcher"></div>
+  `
+
+  const orgSwitcherDiv =
+    document.getElementById('organization-switcher');
+
+  clerk.openCreateOrganization(orgSwitcherDiv);
+
+  // ...
+
+  clerk.closeCreateOrganization(orgSwitcherDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="organization-switcher"> element to your HTML -->
+  <div id="organization-switcher"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgSwitcherDiv =
+        document.getElementById('organization-switcher');
+
+      Clerk.openCreateOrganization(orgSwitcherDiv);
+
+      // ...
+
+      Clerk.closeCreateOrganization(orgSwitcherDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## `CreateOrganizationProps`
 
@@ -245,8 +260,4 @@ All props below are optional.
 | `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.|
 | `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
-[createorg-ref]: /docs/components/organization/create-organization
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
